--- a/service/pom.xml
+++ b/service/pom.xml
@@ -78,13 +78,13 @@
                                     <goal>attached-rpm</goal>
                                 </goals>
                                 <configuration>
-                                    <group>Network/Servers</group>
+                                    <group>NetworkServers</group>
                                     <name>hazelcast-server-service</name>
-                                    <copyright>2012, Olaf Bergner</copyright>
+                                    <license>2012, Olaf Bergner</license>
                                     <packager>Olaf Bergner</packager>
                                     <targetVendor>CentOS</targetVendor>
                                     <needarch>${rpm.arch}</needarch>
-                                    <release>${buildTimestamp}.${rpm.dist}</release>
+                                    <release>${maven.build.timestamp}.${rpm.dist}</release>
                                     <distribution>${rpm.dist}</distribution>
                                     <defaultDirmode>755</defaultDirmode>
                                     <defaultFilemode>644</defaultFilemode>
